@@ -3,7 +3,7 @@ binary_location: /usr/bin/dirb
 url: http://dirb.sourceforge.net/
 
 rules:
-   target-parameter-exists: ['target_ip','target_domain_name','target_port_number','target_protocol']
+   target-parameter-exists: ['ip','domain_name','port_number','protocol']
 
-arguments: "{target_protocol}://{target_domain_name}:{target_port_number}/{target_url} -o {output_dir}/{date}_{target_name}_dirb_{target_domain_name}"
+arguments: "{protocol}://{domain_name}:{port_number}/{url} -o {output_dir}/{date}_{name}_dirb_{domain_name}"
 stdout: True
