@@ -3,7 +3,7 @@ binary_location: /usr/bin/nikto
 url: https://cirt.net/Nikto2
 
 rules:
-   target-parameter-exists: ['target_ip','target_port_number']
+   target-parameter-exists: ['ip','port_number']
 
-arguments: "-h {target_protocol}://{target_domain_name}:{target_port_number} -root /{target_url} -o {output_dir}/{date}_{target_name}_nikto_{target_domain_name}.txt"
+arguments: "-h {protocol}://{domain_name}:{port_number} -root /{url} -o {output_dir}/{date}_{name}_nikto_{domain_name}.txt"
 stdout: True
