@@ -3,7 +3,7 @@ binary_location: /usr/bin/nmap
 url: http://nmap.org/
 
 rules:
-   target-parameter-exists: ['target_ip']
+   target-parameter-exists: ['ip']
 
-arguments: "-A -sS -sC -sV -p1-65535 {target_domain_name} -oA {output_dir}/{date}_{target_name}_nmap_full_range_{target_domain_name}"
+arguments: "-A -sS -sC -sV -p1-65535 {domain_name} -oA {output_dir}/{date}_{name}_nmap_full_range_{domain_name}"
 stdout: True
