@@ -4,8 +4,8 @@ url: http://sourceforge.net/projects/sslscan/
 
 rules:
    equals:
-      'target_protocol': 'https'
-   target-parameter-exists: ['target_ip','target_port_number']
+      'protocol': 'https'
+   target-parameter-exists: ['ip','port_number']
 
-arguments: "{target_domain_name}:{target_port_number} > {output_dir}/{date}_{target_name}_sslscan_{target_domain_name}"
+arguments: "{domain_name}:{port_number} > {output_dir}/{date}_{name}_sslscan_{domain_name}"
 stdout: False
