@@ -4,8 +4,8 @@ url: http://www.bolet.org/TestSSLServer/
 
 rules:
    equals:
-      'target_protocol': 'https'
-   target-parameter-exists: ['target_ip','target_port_number']
+      'protocol': 'https'
+   target-parameter-exists: ['ip','port_number']
 
-arguments: "-jar /root/Downloads/TestSSLServer.jar {target_domain_name} {target_port_number} > {output_dir}/{date}_{target_name}_testsslserver_{target_domain_name}"
+arguments: "-jar /root/Downloads/TestSSLServer.jar {domain_name} {port_number} > {output_dir}/{date}_{name}_testsslserver_{domain_name}"
 stdout: False
