@@ -3,7 +3,7 @@ binary_location: /usr/local/bin/udp-proto-scanner.pl
 url: https://labs.portcullis.co.uk/tools/udp-proto-scanner/
 
 rules:
-   target-parameter-exists: ['target_ip']
+   target-parameter-exists: ['ip']
 
-arguments: "{target_ip} > {output_dir}/{date}_{target_name}_udp-proto-scanner_{target_domain_name}"
+arguments: "{ip} > {output_dir}/{date}_{name}_udp-proto-scanner_{domain_name}"
 stdout: False
